# mckinney_python_ds

./: .gitattributes  .gitignore  ch03.ipynb  pyproject.toml  requirements.txt
src/: toml_version.py
