[tool.poetry]
name = "mckinney-python-ds"
version = "0.1.0"
description = "wes mckinney python for data analysis practice"
authors = ["chawiwi <aisawa15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
lxml = "^5.3.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scipy = "^1.15.2"
patsy = "^1.0.1"
scikit-learn = "^1.6.1"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
